fix long links in polls stretching into the playlist

--- a/www/css/cytube.css
+++ b/www/css/cytube.css
@@ -399,6 +399,7 @@ li.ui-sortable-helper, li.ui-sortable-placeholder + li.queue_entry {
 
 .option {
     margin-top: 5px;
+    word-wrap: break-word;
 }
 
 .option-selected {
